--- a/src/style.css
+++ b/src/style.css
@@ -72,7 +72,7 @@
   color: #1d4dd2;
   background-color: white;
   border: 2px solid #1d4dd2;
-  width: 80px;
+  width: 70px;
   height: 30px;
   cursor: pointer;
   border-radius: calc(var(--radius) / 2);
@@ -82,4 +82,8 @@
   color: white;
   background-color: #1d4dd2;
   border: 2px solid white;
+}
+
+.juejin-miming-msg {
+  margin-top: var(--padding);
 }
